# MANTIS

./: README.md  main.py  pyproject.toml  web_stream.py
scripts/: web_stream.py
src/mantis/: bi_teleop.py  controller_position.py  ik_planner.py  inference.py  record.py
src/mantis/scripts/: web_stream.py
src/mantis/zmq/: image_pub.py  image_sub.py  server.py
tests/: test_controller_position.py
urdf/: so_arm101.urdf
