[project]
name = "mantis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ikpy>=3.4.2",
    "lerobot>=0.4.2",
    "pathlib>=1.0.1",
    "pyzmq>=27.1.0",
    "websockets>=16.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[project.scripts]
server = "mantis.scripts.web_stream:main"
